# meh

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  justfile
config/: default_settings.toml
plans/: ARCHITECTURE.md  CONFIG_REFERENCE.md  DEPENDENCIES.md  GIT_WORKFLOW.md  STEP01.md  STEP02.md  STEP03.md  STEP04.md  STEP05.md  STEP06.md  STEP07.md  STEP08.md  STEP09.md  STEP10.md  STEP11.md  STEP12.md  STEP13.md  STEP14.md  STEP15.md  STEP16.md  STEP17.md  STEP18.md  STEP19.md  STEP20.md  STEP21.md  STEP22.md  STEP23.md  STEP24.md  STEP25.md  STEP26.md  STEP27.md  STEP28.md  STEP29.md  STEP30.md  STEP31.md  STEP32.md  STEP33.md  STEP34.md  STEP35.md  STEP36.md  (+9 more)
src/: app.rs  error.rs  integration_tests.rs  main.rs
src/agent/: mod.rs  sub_agent.rs  task_agent.rs
src/commands/: mod.rs
src/context/: mod.rs  summarizer.rs  truncation.rs
src/controller/: messages.rs  mod.rs  task.rs
src/ignore/: mod.rs  rules.rs
src/permission/: auto_approve.rs  command_perms.rs  mod.rs  yolo.rs
src/prompt/: base.rs  context.rs  environment.rs  mod.rs  rules.rs  tools_section.rs
src/provider/: anthropic.rs  common.rs  gemini.rs  mod.rs  model_registry.rs  openai.rs  openrouter.rs  resolve.rs
src/state/: config.rs  history.rs  mod.rs  secrets.rs  task_state.rs  watcher.rs
src/streaming/: chunk_batcher.rs  mod.rs  thinking_parser.rs  tool_parser.rs  ui_batcher.rs
src/tool/: definitions.rs  executor.rs  mod.rs
src/tool/handlers/: apply_patch.rs  ask_followup.rs  attempt_completion.rs  delegate_task.rs  execute_command.rs  list_files.rs  mcp_tool.rs  mod.rs  plan_mode_respond.rs  read_file.rs  search_files.rs  write_file.rs
src/tool/mcp/: client.rs  mod.rs  transport.rs  types.rs
src/tui/: app_layout.rs  chat_view.rs  event.rs  history_view.rs  input.rs  mod.rs  settings_view.rs  status_bar.rs  thinking_view.rs  tool_view.rs
src/util/: cost.rs  fs.rs  mod.rs  path.rs  process.rs  tokens.rs
