[package]
name = "meh"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "Terminal-based AI coding assistant"
license = "MIT"

[dependencies]
# Async runtime
tokio = { version = "1.50", features = ["full"] }
tokio-util = { version = "0.7", features = ["rt"] }
futures = "0.3"
async-stream = "0.3"
async-trait = "0.1"
pin-project-lite = "0.2"
bytes = "1"

# TUI
ratatui = { version = "0.30", default-features = false, features = ["crossterm"] }
ratatui-textarea = "0.8"

# HTTP & streaming
reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls"] }
reqwest-eventsource = "0.6"
tokio-tungstenite = { version = "0.26", features = ["rustls-tls-webpki-roots"] }
eventsource-stream = "0.2"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# MCP protocol
rmcp = { version = "0.1", features = ["client", "transport-child-process", "transport-sse"] }

# CLI
clap = { version = "4", features = ["derive"] }

# Error handling & logging
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
glob = "0.3"
regex = "1"
dirs = "6"
keyring = "3"
tiktoken-rs = "0.6"
similar = "2"
base64 = "0.22"
shellexpand = "3"
notify = { version = "7", features = ["macos_kqueue"] }
ignore = "0.4"
mimalloc = "0.1"
jiter = "0.13"
crossterm = { version = "0.29", features = ["event-stream"] }

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3"
mockall = "0.13"
assert_cmd = "2"
predicates = "3"

[profile.release]
lto = true
codegen-units = 1
strip = true

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = "warn"
pedantic = "warn"
nursery = "warn"
unnecessary_literal_bound = { level = "allow", priority = 10 }
unwrap_used = "warn"
expect_used = "warn"
